[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemies/StopSign_withCamera.gd" type="Script" id=1]
[ext_resource path="res://Assets/stopSignWithCamera.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 167.25, 116 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 42, 114.5 )

[node name="StopSignWithCamera" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
offset = Vector2( -40, -250 )
hframes = 2

[node name="GoodArea" type="Area2D" parent="."]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoodArea"]
position = Vector2( -151.25, -106 )
shape = SubResource( 1 )

[node name="BadArea" type="Area2D" parent="."]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="BadArea"]
position = Vector2( 60, -104.5 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -44, -110 )
scale = Vector2( 14.7, 12 )

[connection signal="body_entered" from="GoodArea" to="." method="_on_GoodArea_body_entered"]
[connection signal="body_entered" from="BadArea" to="." method="_on_BadArea_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
